metadata-retriever/metadata/objects/Develop_Task__c.object
<CustomObject>
    <description>PMO:  Track Bugs, Enhancement Requests, and Action Items to be resolved during the Build, Validate, Deploy and/or Post-Deployment phases.</description>
    <fields>
        <fullName>Age_in_days__c</fullName>
        <formula>NOW() -  CreatedDate</formula>
        <label>Age (in days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assign_to_Premier_Support__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assign to Premier Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Develop_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Interest_Score__c</fullName>
        <formula>Business_Value_Score__c + Data_Accuracy_Score__c + New_Process_Score__c + Productivity_Score__c + User_Friendliness_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Interest Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Value_Score__c</fullName>
        <formula>CASE(Business_Value__c, &quot;Evolution requested has a negative impact&quot;, -20, &quot;Positive impact on business value&quot;, 20,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Value Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Value__c</fullName>
        <label>Business Value</label>
        <picklist>
            <picklistValues>
                <fullName>No impact</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Evolution requested has a negative impact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Positive impact on business value</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Closed__c</fullName>
        <formula>CASE(Status__c  , 
&quot;Closed (Duplicate)&quot;, &quot;True&quot;,
&quot;Closed (Working As Designed)&quot;, &quot;True&quot;,
&quot;Closed (Question Answered)&quot;, &quot;True&quot;,
&quot;Closed (Verified)&quot;,&quot;True&quot;,
&quot;Closed (Not An Issue)&quot;,&quot;True&quot;,
&quot;False&quot;)</formula>
        <label>Closed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Communication_Comments__c</fullName>
        <label>Communication Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Communication_needed__c</fullName>
        <label>Communication needed</label>
        <picklist>
            <picklistValues>
                <fullName>Home Page Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training Webinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End User Documentation Update</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Components__c</fullName>
        <description>Components to deploy for this DT  &amp; manual deployment steps if needed</description>
        <inlineHelpText>Components to deploy for this DT  &amp; manual deployment steps if needed</inlineHelpText>
        <label>Deployment Components</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Data_Accuracy_Score__c</fullName>
        <formula>CASE(Data_Accuracy__c, &quot;Evolution requested has a negative impact on data quality&quot;, -20, &quot;Reduces risk of error on a importance information (example : direct link with cost or revenue)&quot;, 20,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data Accuracy Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_Accuracy__c</fullName>
        <label>Data Accuracy</label>
        <picklist>
            <picklistValues>
                <fullName>Not relevant</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Evolution requested has a negative impact on data quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reduces risk of error on a importance information (example : direct link with cost or revenue)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Days_to_Completion__c</fullName>
        <formula>Dev_Complete_Date__c - TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days to Completion</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Derived_Urgency__c</fullName>
        <label>Derived Urgency</label>
        <picklist>
            <picklistValues>
                <fullName>Low (Nice to have)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Design_Comments__c</fullName>
        <label>Design Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Design_Impact__c</fullName>
        <label>Design Impact</label>
        <picklist>
            <picklistValues>
                <fullName>Workshop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communication to Design Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gap Analysis with Release</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Dev_Complete_Date__c</fullName>
        <label>Dev Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Develop_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Develop Task</label>
        <referenceTo>Develop_Task__c</referenceTo>
        <relationshipLabel>Develop Tasks</relationshipLabel>
        <relationshipName>Release_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Development_Review__c</fullName>
        <description>Review of the developed components based on the best practices and coding standards
-Developers to set to &quot;Ready for Review&quot; when code complete
-Test classes included in the review</description>
        <inlineHelpText>Review of the developed components based on the best practices and coding standards
-Developers to set to &quot;Ready for Review&quot; when code complete
-Test classes included in the review</inlineHelpText>
        <label>Development Review</label>
        <picklist>
            <picklistValues>
                <fullName>Ready for Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Issues Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Issues Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Enhancement_Objective__c</fullName>
        <label>Enhancement Objective</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Functional_Impact_Analysis__c</fullName>
        <label>Functional Impact Analysis</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Global_Score__c</fullName>
        <formula>Business_Interest_Score__c * User_or_Group_Impacted_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>(Business Interest Score) x (Scope of Change Impact Score)</inlineHelpText>
        <label>Global Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Impact_Details__c</fullName>
        <label>Impact Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Iteration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Iteration</label>
        <referenceTo>Iteration__c</referenceTo>
        <relationshipLabel>Develop Tasks</relationshipLabel>
        <relationshipName>Develop_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LOE_Hours__c</fullName>
        <label>LOE (Hours)</label>
        <picklist>
            <picklistValues>
                <fullName>&lt; 1 hour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 to 8 hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8+ to 40 hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40+ to 160 hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt; 160 hours</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Market_Country__c</fullName>
        <label>Market / Country</label>
        <picklist>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Module_Object__c</fullName>
        <description>Initailly, it list SFDC standard objects. It can be customize per each project.</description>
        <label>Module/Object</label>
        <picklist>
            <picklistValues>
                <fullName>Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Particpating Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preferences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Record</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aftersales Record</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warranty Record</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Key</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle Relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle / Asset</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complaint (Inquiry) / Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Activity / Task</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Attribute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Model Attribute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DM Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DM Material</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DM Stock Flow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Enquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMS/EDM Template</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Article</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Literature Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Literature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Role / Contact</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>New_Development_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Development Task</label>
        <referenceTo>Change_Request__c</referenceTo>
        <relationshipLabel>Develop Tasks</relationshipLabel>
        <relationshipName>Develop_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Process_Score__c</fullName>
        <formula>CASE( New_Process__c , &quot;High impact&quot;, 10, &quot;Low impact &quot;, 0,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Process Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Process__c</fullName>
        <label>New Process</label>
        <picklist>
            <picklistValues>
                <fullName>Not relevant</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Low impact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High impact</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Peripheral_Application_Impact__c</fullName>
        <label>Peripheral Application Impact</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority/Severity</label>
        <picklist>
            <picklistValues>
                <fullName>Critical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Productivity_Score__c</fullName>
        <formula>CASE( Productivity__c , &quot;Evolution requested has a negative impact on productivity&quot;, -20, &quot;Functional response time or process duration reduced&quot;, 10,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Productivity Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Productivity__c</fullName>
        <label>Productivity</label>
        <picklist>
            <picklistValues>
                <fullName>Not relevant</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Evolution requested has a negative impact on productivity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Functional response time or process duration reduced</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Raised_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Who is the original requester?</inlineHelpText>
        <label>Raised by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Release_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Idea_Number_of_Comments__c</fullName>
        <formula>TEXT(Related_Idea__r.NumComments)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Idea Number of Comments</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Idea__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Idea</label>
        <referenceTo>Idea</referenceTo>
        <relationshipName>Release_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requirement__c</fullName>
        <label>Requirement</label>
        <referenceTo>Requirement_UserStory__c</referenceTo>
        <relationshipLabel>Develop Tasks</relationshipLabel>
        <relationshipName>Release_Tasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <label>Resolution</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Root_Cause__c</fullName>
        <description>root cause of bug</description>
        <label>Root Cause</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Solution_Type__c</fullName>
        <description>It&apos;s used by consultant/tech consultant who takes resposibility of fixing DT.</description>
        <label>Solution Type</label>
        <picklist>
            <picklistValues>
                <fullName>Button&amp;Link</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMS/EDM Template</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fields</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Page Layout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Profiles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trigger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visual Page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Validation Rule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workflow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sharing Settings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EP-Extension Platform</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>List View</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Template</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Solution Reviewed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solution Incomplete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete (Ready to Test)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test in Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re-Open (Test Failed)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed (Verified)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed (Duplicate)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed (Working As Designed)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed (Not An Issue)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold (for next release)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Steps_to_Reproduce__c</fullName>
        <label>Steps to Reproduce</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technical_Impact_Analysis__c</fullName>
        <label>Technical Impact Analysis</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Test_Result__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Result</label>
        <referenceTo>Test_Result__c</referenceTo>
        <relationshipName>Development_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Load</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bug Fix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enhancement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Question</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UAT_Dev_Task_Comments__c</fullName>
        <description>fill Test comments</description>
        <label>UAT Dev Task Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Unit_Tests__c</fullName>
        <description>Apex test classes and unit test case scenarios</description>
        <inlineHelpText>Apex test classes and unit test case scenarios</inlineHelpText>
        <label>Unit Tests</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>User_Friendliness_Score__c</fullName>
        <formula>CASE( User_Friendliness__c , &quot;Evolution requested has a negative impact on user friendliness&quot;, -20, &quot;Positive impact on user friendliness&quot;, 20,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Friendliness Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Friendliness__c</fullName>
        <label>User Friendliness</label>
        <picklist>
            <picklistValues>
                <fullName>Not relevant</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Evolution requested has a negative impact on user friendliness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Positive impact on user friendliness</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_Interface_Impact_Analysis__c</fullName>
        <label>User Interface Impact Analysis</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>User_Story_Lead__c</fullName>
        <formula>Requirement__r.assign_to_BA_user__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Story: Lead</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Story_Solution_Reviewed__c</fullName>
        <formula>IF(Requirement__r.Solution_Reviewed_old__c, &apos;Yes&apos;, &apos;No&apos;)</formula>
        <label>User Story: Solution Reviewed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Story_Stream__c</fullName>
        <formula>LEFT(Requirement__r.Name , 6)</formula>
        <label>User Story: Stream</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Story_Subject__c</fullName>
        <formula>Requirement__r.Subject__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Story: Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_or_Group_Impacted_Score__c</fullName>
        <formula>CASE(User_or_Group_Impacted__c , &quot;Business Unit&quot;, 1, &quot;Country&quot;, 5, &quot;Region&quot;,5, &quot;All&quot;, 10, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User or Group Impacted Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_or_Group_Impacted__c</fullName>
        <description>Which user or group is affected by the request</description>
        <inlineHelpText>Which user or group is affected by the request</inlineHelpText>
        <label>User or Group Impacted</label>
        <picklist>
            <picklistValues>
                <fullName>Individual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Country</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Workaround__c</fullName>
        <label>Workaround?</label>
        <picklist>
            <picklistValues>
                <fullName>Not relevant</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Existing satisfactory alternative method</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reasonable workaround (effort to make it happen)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Difficult workaround (effort to make it happen)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No alternative or unacceptable alternative method</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Develop Task</label>
    <listViews>
        <fullName>All_UAT_DT</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Priority__c</columns>
        <columns>Derived_Urgency__c</columns>
        <columns>Raised_by__c</columns>
        <columns>Subject__c</columns>
        <columns>Description__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>10/14/2011 12:00 AM</value>
        </filters>
        <label>All UAT DT</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Campaign_DT</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>Dev_Complete_Date__c</columns>
        <columns>Requirement__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Subject__c</columns>
        <columns>Description__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Resolution__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>User_Story_Stream__c</field>
            <operation>contains</operation>
            <value>Cpn</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Develop_Task__c.Action_Item</value>
        </filters>
        <label>Campaign DT</label>
    </listViews>
    <listViews>
        <fullName>Case_DT</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Dev_Complete_Date__c</columns>
        <columns>Requirement__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Subject__c</columns>
        <columns>Description__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Resolution__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>User_Story_Subject__c</field>
            <operation>equals</operation>
            <value>Case</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Develop_Task__c.Action_Item</value>
        </filters>
        <label>Case DT</label>
    </listViews>
    <listViews>
        <fullName>Closed_DT</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Subject__c</columns>
        <columns>Description__c</columns>
        <columns>Derived_Urgency__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>contains</operation>
            <value>Close</value>
        </filters>
        <label>Closed DT</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>DT_AU</fullName>
        <columns>NAME</columns>
        <columns>Requirement__c</columns>
        <columns>Type__c</columns>
        <columns>Subject__c</columns>
        <columns>Priority__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Market_Country__c</field>
            <operation>equals</operation>
            <value>Australia</value>
        </filters>
        <label>DT_AU</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Engaged_DT</fullName>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>Description__c</columns>
        <columns>Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Derived_Urgency__c</columns>
        <columns>Raised_by__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LOE_Hours__c</columns>
        <columns>Resolution__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notContain</operation>
            <value>Closed,New,On Hold</value>
        </filters>
        <label>Engaged DT</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Tasks2</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Type__c</columns>
        <columns>Subject__c</columns>
        <columns>Status__c</columns>
        <columns>Priority__c</columns>
        <columns>Days_to_Completion__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Assigned_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_To__c</field>
            <operation>contains</operation>
            <value>Iliu</value>
        </filters>
        <label>My Tasks</label>
        <language>en_US</language>
    </listViews>
</CustomObject>